--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
     width: 100%;
     font-size: 20px;
+    margin: 0;
+    padding: 0;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto 1fr;
@@ -104,4 +106,18 @@ li b {
     color: rgb(63, 63, 63);
     font-size: 16px;
     font-style: italic;
+}
+
+/*Extra- Small devices (340px and up)*/
+@media (min-width: 340px) { 
+    #img-caption {
+        font-size: 10px;
+    }
+}
+
+/*Small devices (landscape phones, 576px and up)*/
+@media (min-width: 576px) { 
+    #img-caption {
+        font-size: 14px;
+    }
 }
